Changelog
=========

2.3.10 (unreleased)
-------------------

- Nothing changed yet.


2.3.9 (2015-09-27)
------------------

- Added ``text-decoration`` to allowed css style attributes in
  ``@@filter-controlpanel``.  Change backported from master.
  [jnachtigall, vangheem, maurits]


2.3.8 (2013-12-07)
------------------

- Fix test email: msgid was sent, not translation.
  [thomasdesvenain]

- Fix syndication settings to not write on read.
  [vangheem]


2.3.7 (2013-08-13)
------------------

- In the users listing and group membership listing, show the user's
  login name instead of the user id, which is an internal identifier.
  [davisagli]

- In the groups listing, don't show the group name if it is the same
  as the group title.
  [davisagli]

- Don't display the upgrade portal message unless the logged in user
  actually has the permission to upgrade the portal. No one likes a
  tease.
  [eleddy]


2.3.6 (2013-05-30)
------------------

- Fix get_display_pub_date_in_byline when upgrading your site, refs
  https://dev.plone.org/ticket/13604
  [maartenkling]


2.3.5 (2013-05-23)
------------------

- Do not assume roles managed through the control panel include Manager.
  [danjacka]


2.3.4 (2013-01-13)
------------------

- Call searchUsers with the 'name' argument instead of 'login'.
  'name' is the officially supported way according to the PAS interface.
  [maurits]


2.3.3 (2013-01-01)
------------------

- Fix description of 'email as login' security setting.  It said
  existing users could go to the personalize information page and save
  it to start using their email as login, but that no longer works and
  is too hard to fix.  We now only recommend using the
  migrate-to-emaillogin page as manager.
  Fixes http://dev.plone.org/ticket/11283
  [maurits]

- Only show the inline editing setting if plone.app.kss is present.
  [davisagli]

- Fix as site administrator modify users in controlpanel